--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,7 @@ APScheduler==3.10.4
 python-dateutil==2.8.2
 
 # OpenAI SDK (用于调用大模型)
-openai==1.3.0
-
-# 环境变量管理
-python-dotenv==1.0.0
+openai>=1.54.0
 
 # 日志
 colorlog==6.7.0
