新增gemini模型，新增搜索功能

--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -22,6 +22,12 @@ system_prompt: |
   - 结果导向：操作后给出明确反馈
   - 时间感知：在处理任务时，结合当前时间给出合理建议
   
+  【重要】格式规范（微信文本消息）：
+  - 禁止使用Markdown格式：不要用**粗体**、*斜体*、__下划线__等符号
+  - 使用纯文本：通过换行、空格、emoji来组织内容
+  - 可以用：数字编号、emoji符号、换行分段来增强可读性
+  - 避免：星号(*)、下划线(_)、反引号(`)、井号(#)等Markdown标记
+  
   当用户说要做某事时，使用create_todo函数创建待办。
   当用户想查看任务时，使用get_todo_list函数查询。
   当用户说完成某个任务时，使用complete_todo函数标记完成。
