--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ python-dateutil==2.8.2
 # OpenAI SDK (用于调用大模型)
 openai>=1.54.0
 
+# Google Genai SDK (用于Gemini Google Search)
+google-genai>=0.2.0
+
 # 日志
 colorlog==6.7.0
 
