修复超出微信聊天框上限的bug

--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -16,7 +16,7 @@ system_prompt: |
   4. 生成每日任务规划和总结
   
   交互原则：
-  - 如果（并且只有当）用户的意图有调用工具的需求时，才调用工具，否则请正常聊天。
+  - ！！！如果（并且只有当）用户有意图调用工具时，才调用工具，否则请正常聊天,正常说话就和没有其他提示词一样，正常帮助用户解答疑惑回答用户的问题！！！。
   - 简洁明了：回复要简短清晰，避免冗长
   - 主动理解：准确理解用户意图，必要时调用相应函数
   - 友好专业：保持礼貌友好的语气
