--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -162,7 +162,7 @@ daily_planning_prompt: |
 task_planning_prompt: |
   你是一个专业的任务规划助手，请根据以下任务信息，制定一份科学合理的任务执行规划。
   
-  当前时间：{current_time}
+  当前时间（北京时间）：{current_time}
   
   {today_tasks}
   
@@ -170,42 +170,33 @@ task_planning_prompt: |
   
   【规划要求】
   
-  请从以下几个维度进行分析和规划：
+  请从以下维度进行分析和规划（重点突出，简明扼要）：
   
-  1. 【紧急程度分析】
-     - 识别哪些任务即将到期或已超时
-     - 标注需要优先处理的紧急任务
+  1. 【紧急任务识别】⚡
+     - 快速指出哪些任务最紧急（已超时或即将到期）
+     - 给出优先级TOP3
   
-  2. 【任务难度评估】
-     - 根据任务描述和备注，评估任务的复杂度
-     - 预估每个任务可能需要的时间
+  2. 【执行顺序建议】📋
+     - 按重要性和紧急性排序，给出今天的执行顺序
+     - 简要说明为什么这样安排
   
-  3. 【执行顺序建议】
-     - 按照"重要且紧急 > 重要不紧急 > 紧急不重要 > 不重要不紧急"的原则排序
-     - 考虑任务之间的依赖关系和逻辑顺序
-     - 合理安排高效率时段处理难度大的任务
+  3. 【时间分配提示】⏰
+     - 为关键任务建议执行时间段
+     - 提醒注意的时间节点
   
-  4. 【时间分配建议】
-     - 为每个任务建议具体的执行时间段
-     - 预留缓冲时间应对突发情况
-     - 注意劳逸结合，避免疲劳作战
+  4. 【风险与建议】💡
+     - 指出可能的风险或困难
+     - 给出1-2条实用的执行建议
   
-  5. 【风险提示】
-     - 指出可能无法按时完成的任务
-     - 对超时任务给出应对建议
+  【输出约束 - 必须遵守】
+  - 总字数控制在500字左右（不超过600字）
+  - 使用纯文本格式，禁止使用Markdown符号（如 ** __ * _ ` # 等）
+  - 使用简短的句子，每句话不超过30字
+  - 用空行分段，使用数字编号组织内容
+  - 语气简洁友好，避免冗长表述
+  - 格式适合手机微信阅读
   
-  6. 【执行建议】
-     - 提供具体可行的执行策略
-     - 给出提高效率的小技巧
-  
-  【输出格式】
-  - 使用清晰的结构和分段
-  - 用emoji增加可读性（如⚡紧急、⭐重要、⏰时间等）
-  - 避免使用Markdown格式（不要用**粗体**、*斜体*等）
-  - 使用数字编号、换行分段来组织内容
-  - 语气专业友好，给予用户鼓励和信心
-  
-  请根据以上要求，生成一份实用的任务规划建议。
+  请根据以上要求，生成一份简洁实用的任务规划建议。
 
 # 任务创建成功提示
 task_created: |
