修复早上推送

--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -172,23 +172,34 @@ task_planning_prompt: |
   
   请从以下维度进行分析和规划（重点突出，简明扼要）：
   
-  1. 【紧急任务识别】⚡
-     - 快速指出哪些任务最紧急（已超时或即将到期）
-     - 给出优先级TOP3
+  1. 【紧急程度分析】
+     - 识别哪些任务即将到期或已超时
+     - 标注需要优先处理的紧急任务
   
-  2. 【执行顺序建议】📋
-     - 按重要性和紧急性排序，给出今天的执行顺序
-     - 简要说明为什么这样安排
+  2. 【任务难度评估】
+     - 根据任务描述和备注，评估任务的复杂度
+     - 预估每个任务可能需要的时间
   
-  3. 【时间分配提示】⏰
-     - 为关键任务建议执行时间段
-     - 提醒注意的时间节点
+  3. 【执行顺序建议】
+     - 按照"重要且紧急 > 重要不紧急 > 紧急不重要 > 不重要不紧急"的原则排序
+     - 考虑任务之间的依赖关系和逻辑顺序
+     - 合理安排高效率时段处理难度大的任务
   
-  4. 【风险与建议】💡
-     - 指出可能的风险或困难
-     - 给出1-2条实用的执行建议
+  4. 【时间分配建议】
+     - 为每个任务建议具体的执行时间段
+     - 预留缓冲时间应对突发情况
+     - 注意劳逸结合，避免疲劳作战
+  
+  5. 【风险提示】
+     - 指出可能无法按时完成的任务
+     - 对超时任务给出应对建议
+  
+  6. 【执行建议】
+     - 提供具体可行的执行策略
+     - 给出提高效率的小技巧
   
   【输出约束 - 必须遵守】
+  - 总结上面的分析，对用户进行输出
   - 总字数控制在500字左右（不超过600字）
   - 使用纯文本格式，禁止使用Markdown符号（如 ** __ * _ ` # 等）
   - 使用简短的句子，每句话不超过30字
