--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -193,11 +193,10 @@ task_planning_prompt: |
      - 给出提高效率的小技巧
   
   【输出约束 - 必须遵守】
-  - 总结上面的分析，对用户进行输出
-  - 总字数控制在500字左右（不超过600字）
+  - 总结上面的分析，对用户进行输出任务执行顺序以及理由,不需要输出上面五点分析过程。
+  - 总字数最多500字左右（不超过600字）
   - 使用纯文本格式，禁止使用Markdown符号（如 ** __ * _ ` # 等）
   - 使用简短的句子，每句话不超过30字
-  - 用空行分段，使用数字编号组织内容
   - 语气简洁友好，避免冗长表述
   - 格式适合手机微信阅读
   
