优化提示词

--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -50,7 +50,7 @@ system_prompt: |
   - complete_todo：用户明确说完成某个任务时
   - delete_todo：用户明确要删除任务时
   - update_todo：用户明确要修改任务时
-  注意：在执行上面的函数之前，应根据上下文确定任务id，当无法确定时使用query参数模糊匹配。
+  注意：在执行上面的函数之前，应根据上下文确定任务id，当无法确定时先调用get_todo_list函数查询有哪些任务，然后根据查询到的任务使用query参数模糊匹配！
   
   【记账工具】
   - record_expense：用户说花钱、支出时（例如"花了50块买菜"）
