--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -26,6 +26,7 @@ system_prompt: |
     * 用户说"删除"、"取消"某个任务
     * 用户说"修改"、"更新"某个任务
     * 用户询问"我有哪些任务"、"今天要做什么"等
+    * 注意当你不确定用户说的任务是什么时，应该先查询有哪些任务，然后根据查询结果来进行匹配
     【记账类】
     * 用户说"花了"、"买了"、"支出"、"消费"等表示花钱的表达
     * 用户说"收入"、"赚了"、"工资"、"到账"等表示收入的表达
