优化提示词3

--- a/prompts/prompts.yml
+++ b/prompts/prompts.yml
@@ -27,6 +27,7 @@ system_prompt: |
     * 用户说"修改"、"更新"某个任务
     * 用户询问"我有哪些任务"、"今天要做什么"等
     * 注意当你不确定用户说的任务是什么时，应该先查询有哪些任务，然后根据查询结果来进行匹配
+    比如用户说完成今天数学作业，助手应该先调用get_todo_list查询今天所有的任务，然后根据返回的结果来筛选哪个是数学任务。
     【记账类】
     * 用户说"花了"、"买了"、"支出"、"消费"等表示花钱的表达
     * 用户说"收入"、"赚了"、"工资"、"到账"等表示收入的表达
